--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  chopper: ^3.0.6
   provider: ^4.3.3
   connectivity: ^2.0.2
+  chopper: ^3.0.5
+  built_value: ^7.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -34,7 +35,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  chopper_generator: ^3.0.6
+  chopper_generator: ^3.0.5
+  built_value_generator: ^7.1.0
   build_runner:
 
 # For information on the generic Dart part of this file, see the
